<resources>

  <!-- Common -->
  <string name="default_text">default</string>

  <!-- Toolbar -->
  <string name="app_name">Mizen</string>
  <string name="staff_alert">Staff</string>

  <!-- Tab Layout -->
  <string name="all">all</string>
  <string name="entree">Entree</string>
  <string name="sides">Sides</string>
  <string name="main">Main</string>
  <string name="desserts">Desserts</string>
  <string name="drinks">Drinks</string>

  <!-- Item Row -->
  <string name="add">Add</string>

  <!-- Order View -->
  <string name="your_order">Your Order</string>
  <string name="order">Order</string>
  <string name="pay_now">pay now</string>
  <string name="total">Total: </string>

  <!-- Popup View -->
  <string name="close">close</string>
  <string name="note">Note:</string>
  <string name="quantity">Quantity:</string>
  <string name="plus_sign">+</string>
  <string name="minus_sign">-</string>
  <string name="zero">0</string>

  <string name="x">x</string>

  <string name="payment">Payment</string>
  <string name="enter_details">Enter Your Card Details</string>

  <string name="card_number">Card Number: </string>
  <string name="expiry">Expiry: </string>
  <string name="cvc">CVC: </string>

  <string name="card_error">error in processing your payment. Please check your details.</string>

  <string name="change">change</string>

</resources>
