<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <android.support.v7.widget.RecyclerView
    android:id="@+id/recycler_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:background="@color/white"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tab_layout"/>

  <android.support.design.widget.TabLayout
    android:id="@+id/tab_layout"
    android:layout_width="653dp"
    android:layout_height="49dp"
    android:layout_marginBottom="8dp"
    app:layout_constraintBottom_toTopOf="@+id/recycler_view"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:tabIndicatorColor="@color/highlights"
    app:tabGravity="fill">

    <android.support.design.widget.TabItem
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/all"/>
    <android.support.design.widget.TabItem
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/entree"/>
    <android.support.design.widget.TabItem
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/sides"/>
    <android.support.design.widget.TabItem
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/main"/>
    <android.support.design.widget.TabItem
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/desserts"/>
    <android.support.design.widget.TabItem
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/drinks"/>

  </android.support.design.widget.TabLayout>

</android.support.constraint.ConstraintLayout>