<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/main_activity"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/white"
  tools:context=".MainActivity">

  <android.support.v7.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@color/colorPrimary"
    android:elevation="4dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>

  <fragment
    android:id="@+id/menu_fragment"
    android:layout_width="645dp"
    android:layout_height="393dp"
    android:name="com.mad.mizen.menu.MenuFragment"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="1.0"/>

  <fragment
    android:id="@+id/order_fragment"
    android:layout_width="292dp"
    android:layout_height="384dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:name="com.mad.mizen.order.OrderFragment"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toEndOf="@+id/menu_fragment"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="1.0"/>
  <android.support.design.widget.TabLayout
    android:id="@+id/tab_layout"
    android:layout_width="653dp"
    android:layout_height="49dp"
    android:layout_marginBottom="8dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/toolbar"
    app:layout_constraintVertical_bias="0.0"
    app:tabIndicatorColor="@color/highlights">

    <android.support.design.widget.TabItem
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/entree"/>
    <android.support.design.widget.TabItem
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/sides"/>
    <android.support.design.widget.TabItem
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/main"/>
    <android.support.design.widget.TabItem
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/desserts"/>
    <android.support.design.widget.TabItem
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/drinks"/>

  </android.support.design.widget.TabLayout>

</android.support.constraint.ConstraintLayout>